# floz-macros-core

./: Cargo.toml
src/: ast.rs  channel.rs  codegen.rs  crud.rs  embed.rs  extract.rs  lib.rs  model.rs  parse.rs  route.rs  task.rs
src/codegen/: dao.rs  ddl.rs  defaults.rs  relations.rs  setters.rs  structs.rs  table.rs  types.rs  utils.rs  validate.rs
src/model/: attr.rs  builder.rs  col.rs  modify.rs  rel.rs  snapshot.rs  types.rs
tests/: test_ast.rs  test_crud.rs  test_model.rs  test_parse.rs  test_route.rs  test_task.rs
