[package]
name = "floz-macros-core"
version.workspace = true
edition = "2021"
description = "Core logic for floz-macros"
authors = ["Floz Team"]
license = "MIT"
repository = "https://github.com/floz-rs/floz-macros-core"
homepage = "https://floz.pro"

[lib]
proc-macro = false

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
